add new 2 images

--- a/src/web/src/index.html
+++ b/src/web/src/index.html
@@ -3,5 +3,7 @@
 		<p>uffy doffy</p>
 		<img src="../imgs/sample_0.jpg"> 
 		<img src="../imgs/sample_1.jpg"> 
+		<img src="../imgs/sample_2.jpg">
+		<img src="../imgs/pklogo.gif">
 	</body>
 </html>
